--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "test": "jest --verbose",
-    "dev": "nodemon index -"
+    "dev": "nodemon index"
   },
   "repository": {
     "type": "git",
